--- a/.env.template
+++ b/.env.template
@@ -1,4 +1,7 @@
 VANITY_MAINTENANCE=false
+VANITY_DOMAIN=go.rotational.io
+VANITY_DEFAULT_BRANCH=main
+VANITY_CONFIG_MAP=tmp/vanity.yaml
 VANITY_LOG_LEVEL=info
 VANITY_CONSOLE_LOG=true
 VANITY_BIND_ADDR=127.0.0.1:8000
