--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -40,7 +40,7 @@ jobs:
       GOTEST_GITHUB_ACTIONS: 1
     defaults:
       run:
-        working-directory: ${{ env.GOPATH }}/src/github.com/rotationalio/vanity
+        working-directory: ${{ env.GOPATH }}/src/go.rtnl.ai/vanity
     steps:
       - name: Set up Go
         uses: actions/setup-go@v5
@@ -58,7 +58,7 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v4
         with:
-          path: ${{ env.GOPATH }}/src/github.com/rotationalio/vanity
+          path: ${{ env.GOPATH }}/src/go.rtnl.ai/vanity
 
       - name: Code Generation
         run: go generate ./...
@@ -74,7 +74,7 @@ jobs:
       GOBIN: ${{ github.workspace }}/go/bin
     defaults:
       run:
-        working-directory: ${{ env.GOPATH }}/src/github.com/rotationalio/vanity
+        working-directory: ${{ env.GOPATH }}/src/go.rtnl.ai/vanity
     steps:
       - name: Set up Go
         uses: actions/setup-go@v5
@@ -92,7 +92,7 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v4
         with:
-          path: ${{ env.GOPATH }}/src/github.com/rotationalio/vanity
+          path: ${{ env.GOPATH }}/src/go.rtnl.ai/vanity
 
       - name: Code Generation
         run: go generate ./...
